kubernetes/apps/network/external-services/octoprint/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app octoprint
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
