kubernetes/apps/network/external-services/octoprint/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app octoprint
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["octoprint.${DOMAIN_APP}"]
  parentRefs:
    - name: envoy-services
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 80
